Changed the spacing of the card text, but am still having issues with getting the text decoration to display to none. It's not working.

--- a/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin-left: 15px;
 }
 
 .card-content-title{
